--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -259,7 +259,6 @@
 }
 .info__title {
   font-size: 24px;
-  -webkit-filter: 500;
   margin-bottom: 25px;
   margin-top: 30px;
 }
@@ -284,7 +283,7 @@
 // ----------------START---weekly slider
 .slider__featured {
   background-color: $grey;
-  padding-bottom: 50px;
+  padding-bottom: 120px;
 }
 .slider-inner__wrap {
   padding-top: 120px;
@@ -394,13 +393,14 @@
 .slider-top {
   button {
     position: absolute;
-    top: -117px;
+    top: -127px;
     right: 100px;
     border: none;
     background-color: $pur;
     padding: 15px 20px;
     border-radius: 24px;
     outline: none;
+    cursor: pointer;
     &.slick-next {
       position: absolute;
       right: 73px;
@@ -413,5 +413,360 @@
 }
 // ----------------END---weekly slider
 
-// ----------------START---SEARCH
-// ----------------END---SEARCH
+// ----------------START---Products
+.products {
+  background-color: #f6f7fb;
+  padding-bottom: 40px;
+  padding-top: 120px;
+}
+.products__inner-bar,
+.panel {
+  height: 110px;
+  margin-bottom: 30px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  display: flex;
+  align-content: center;
+  text-align: center;
+  justify-content: space-between;
+  background-color: #fff;
+}
+.products__inner-title {
+  font-size: 30px;
+  line-height: 28px;
+  font-weight: 500;
+  padding: 40px 0 0 30px;
+}
+.products__inner-filter {
+  padding: 45px 40px 0 30px;
+}
+.products__inner-btn {
+  height: 100px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  margin-bottom: 50px;
+  background-color: #fff;
+  align-items: center;
+
+  button + button {
+    margin-left: 15px;
+  }
+  button {
+    font-size: 15px;
+    color: #000;
+    padding: 10px 20px;
+    border: none;
+    outline: none;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color: #f1f3f6;
+  }
+}
+.inner-btn {
+  padding: 30px 30px;
+}
+
+.products__inner-box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.products__item {
+  width: 360px;
+  background-color: #fff;
+  margin-bottom: 30px;
+}
+
+.products__item-img {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 360px;
+  height: 230px;
+}
+.products__item-name {
+  padding: 30px 15px;
+}
+.products__item-title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.products__item-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+.item-box {
+  align-items: center;
+  border-top: 1px solid #000;
+  display: flex;
+  justify-content: space-between;
+}
+.products__item-price {
+  padding: 20px;
+
+  span {
+    background-color: $blue;
+    padding: 10px;
+    border-radius: 20px;
+    color: $text;
+  }
+}
+.products__item-star {
+  margin-right: 20px;
+}
+
+.products__bottom-btn {
+  align-items: center;
+  text-align: center;
+  button {
+    border: none;
+    background-image: linear-gradient(
+      180deg,
+      rgb(0, 48, 222) 0%,
+      rgb(23, 69, 237) 54%,
+      rgb(46, 90, 251) 100%
+    );
+    padding: 10px 17px;
+    border-radius: 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s;
+    outline: none;
+
+    &:hover {
+      background-image: linear-gradient(
+        180deg,
+        rgb(188, 192, 207) 0%,
+        rgb(255, 255, 255) 54%,
+        rgb(241, 241, 243) 100%
+      );
+      color: $blue;
+    }
+  }
+}
+// ----------------END---products
+
+// STARR SLIDER MIX
+
+.slier-mix {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #eff1f5;
+}
+
+.slick-slide {
+  margin: 0 10px;
+}
+
+.slier-mix__box {
+  button {
+    position: absolute;
+    top: -108px;
+    right: 100px;
+    border: none;
+    background-color: $blue;
+    padding: 15px 20px;
+    border-radius: 24px;
+    outline: none;
+    cursor: pointer;
+    &.slick-next {
+      position: absolute;
+      right: 73px;
+      padding-left: 40px;
+    }
+    &.slick-prev {
+      padding-right: 40px;
+    }
+  }
+}
+// ENd SLIDER MIX
+
+// STARR INFO stats
+.info__sale {
+  background-color: #212225;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.info__sale-inner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+.info__sale-icon {
+  margin-bottom: 20px;
+}
+.info__sale-numbers {
+  line-height: 66px;
+  font-size: 40px;
+}
+.info__sale-text {
+  font-size: 18px;
+  color: #fff;
+}
+.icon1 {
+  color: #feb71d;
+}
+.icon2 {
+  color: #58c9e9;
+}
+.icon3 {
+  color: #77de51;
+}
+.icon4 {
+  color: #ff6a6d;
+}
+
+// ENd info stats
+
+// STARR choose
+.choose {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #fff;
+}
+.choose__heading {
+  align-items: center;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.choose__title {
+  font-size: 36px;
+  line-height: 28px;
+  margin-bottom: 20px;
+  span {
+    color: $blue;
+  }
+}
+.choose__text {
+  width: 675px;
+  font-size: 16px;
+  color: #555555;
+  margin: 0 auto;
+}
+.choose__items {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.choose__item {
+  width: 360px;
+  height: 375px;
+  background-color: #fff;
+  box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+  align-items: center;
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+.choose__num {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: #5c87f8;
+  font-size: 48px;
+  opacity: 0.2;
+}
+.choose__img {
+  padding: 50px 0;
+}
+.choose__item-title {
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+.choose__item-text {
+  font-size: 16px;
+  color: #555;
+  width: 290px;
+  margin: 0 auto;
+}
+
+// ENd choose
+
+// STARR shopping
+.shopping{
+  margin-bottom: 50px;
+}
+.shopping__inner {
+  display: flex;
+}
+.shopping__items-left {
+  background-color: #0674ec;
+  width: 50%;
+}
+.shopping__items-right {
+  background-color: $pur;
+  width: 50%;
+}
+.shopping__item {
+  width: 100%;
+  padding: 100px 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  text-align: center;
+  position: relative;
+}
+.shopping__items-img {
+  margin-bottom: 50px;
+}
+.shopping__items-title {
+  font-size: 36px;
+  line-height: 30px;
+  margin-bottom: 30px;
+  padding: 0 10px;
+}
+.shopping__items-title,
+.shopping__items-text {
+  color: #fff;
+}
+.shopping__items-text {
+  width: 580px;
+  font-size: 16px;
+  line-height: 30px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+.shopping__btn {
+  margin-top: 50px;
+  transition: all 0.3s;
+  button {
+    border: none;
+    background-color: #fff;
+    padding: 10px 17px;
+    border-radius: 20px;
+    border: 1px solid #fff;
+    color: $blue;
+    cursor: pointer;
+    outline: none;
+    &:hover {
+      background-image: linear-gradient(
+        180deg,
+        rgb(188, 192, 207) 0%,
+        rgb(255, 255, 255) 54%,
+        rgb(241, 241, 243) 100%
+      );
+      color: $blue;
+    }
+  }
+}
+.btn-shopping {
+  button {
+    color: $pur;
+  }
+}
+
+// ENd shopping
+
+// STARR SLIDER MIX
+// ENd SLIDER MIX
+
+// STARR SLIDER MIX
+// ENd SLIDER MIX
+
+// STARR SLIDER MIX
+// ENd SLIDER MIX
